Updated finish test button

--- a/src/shared/language/locales/en/translation.json
+++ b/src/shared/language/locales/en/translation.json
@@ -114,7 +114,7 @@
         "Incorrect!": "Incorrect!",
         "Correct answer": "Correct answer",
         "All words completed!": "All words completed!",
-        "Finish Test": "Finish Test",
+        "Finish": "Finish Test",
         "Testing": "Testing",
         "Continue": "Continue",
         "Check": "Check",
