--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -115,7 +115,7 @@
         "Incorrect!": "არასწორია!",
         "Correct answer": "სწორი პასუხი",
         "All words completed!": "ყველა სიტყვა დასრულდა!",
-        "Finish Test": "ტესტის დასრულება",
+        "Finish": "ტესტის დასრულება",
         "Testing": "ტესტირება",
         "Continue": "გაგრძელება",
         "Check": "შემოწმება",
