--- a/src/shared/language/locales/ru/translation.json
+++ b/src/shared/language/locales/ru/translation.json
@@ -113,7 +113,7 @@
         "Incorrect!": "Неверно!",
         "Correct answer": "Правильный ответ",
         "All words completed!": "Все слова пройдены!",
-        "Finish Test": "Завершить тест",
+        "Finish": "Завершить тест",
         "Testing": "Тестирование",
         "Continue": "Продолжить",
         "Check": "Проверить",
