proper handling existing words and bugfix

--- a/src/shared/language/locales/en/translation.json
+++ b/src/shared/language/locales/en/translation.json
@@ -118,6 +118,7 @@
         "Testing": "Testing",
         "Continue": "Continue",
         "Check": "Check",
-        "Word": "Word"
+        "Word": "Word",
+        "userHasThisTranslation": "Word have such translation, but expected other"
     }
 }
