--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -57,7 +57,7 @@
         "ka": "ქართული"
     },
     "errors": {
-        "wordExists": "ეს სიტყვა უკვე არსებობს თქვენს ლექსიკონში. გსურთ გამეორება?",
+        "wordExists": "ეს სიტყვა უკვე არსებობს თქვენს ლექსიკონში.",
         "default": "მოხდა უცნობი შეცდომა."
     },
     "pagination": {
@@ -119,6 +119,9 @@
         "Testing": "ტესტირება",
         "Continue": "გაგრძელება",
         "Check": "შემოწმება",
-        "Word": "სიტყვა"
+        "Word": "სიტყვა",
+        "userHasThisTranslation": "არსებობს თარგმანი, მაგრამ მოსალოდნელია სხვა",
+        "successSubmit": "შედეგები წარმატებით აიტვირთა!",
+        "errorSubmit": "შედეგების გაგზავნის დროს რაღაც შეცდომა მოხდა."
     }
 }
