--- a/src/shared/language/locales/ru/translation.json
+++ b/src/shared/language/locales/ru/translation.json
@@ -117,6 +117,9 @@
         "Testing": "Тестирование",
         "Continue": "Продолжить",
         "Check": "Проверить",
-        "Word": "Слово"
+        "Word": "Слово",
+        "userHasThisTranslation": "Такой перевод существует, но ожидается другое",
+        "successSubmit": "Результаты успешно отправлены!",
+        "errorSubmit": "Что-то пошло не так во время отправки результатов."
     }
 }
