Added book service, hooks and test components

--- a/src/shared/language/locales/en/translation.json
+++ b/src/shared/language/locales/en/translation.json
@@ -36,7 +36,8 @@
         "addWords": "Add Words",
         "repeat": "Remind Words",
         "wordList": "Vocabulary",
-        "manageWords": "View words"
+        "manageWords": "View words",
+        "books": "View Books"
     },
     "manageWords": "View words",
     "addWordsPage": {
