--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -36,7 +36,8 @@
         "addWords": "სიტყვების დამატება",
         "repeat": "სიტყვების გამეორება",
         "wordList": "ლექსიკონი",
-        "manageWords": "სიტყვების მიმოხილვა"
+        "manageWords": "სიტყვების მიმოხილვა",
+        "books": "წიგნების მიმოხილვა"
     },
     "manageWords": "სიტყვების მიმოხილვა",
 
