--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -139,6 +139,7 @@
         "renameSuccess": "წარმატებით განახლდა.",
         "renameFailed": "სათაური ვერ განახლდა.",
         "deletedSuccess": "წარმატებით წაიშალა.",
-        "deleteFailed": "წაიშალის დროს შეცდომა მოხდა."
+        "deleteFailed": "წაიშალის დროს შეცდომა მოხდა.",
+        "loading": "ჩატვირთვა..."
     }
 }
