--- a/src/shared/language/locales/ru/translation.json
+++ b/src/shared/language/locales/ru/translation.json
@@ -137,6 +137,7 @@
         "renameSuccess": "Заголовок обновлен.",
         "renameFailed": "Не вышло обновить заголовок.",
         "deletedSuccess": "Книга успешно удалена",
-        "deleteFailed": "Произошла ошибка во время удаления."
+        "deleteFailed": "Произошла ошибка во время удаления.",
+        "loading": "Загрузка..."
     }
 }
