--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -140,6 +140,13 @@
         "renameFailed": "სათაური ვერ განახლდა.",
         "deletedSuccess": "წარმატებით წაიშალა.",
         "deleteFailed": "წაიშალის დროს შეცდომა მოხდა.",
-        "loading": "ჩატვირთვა..."
+        "loading": "ჩატვირთვა...",
+        "emptyPage": "ცარიელი გვერდი",
+        "userIdNotFound": "მომხმარებლის ID ვერ მოიძებნა ან ფაილი არ არის არჩეული",
+        "uploadSuccess": "წიგნი წარმატებით აიტვირთა",
+        "uploadFail": "წიგნი ვერ აიტვირთა",
+        "uploadBookPdf": "PDF წიგნის ატვირთვა",
+        "pleaseWaitUpload": "გთხოვთ მოითმინოთ, მიმდინარეობს ატვირთვა...",
+        "pleaseWaitUploadClue": "წიგნის ზომიდან გამომდინარე, პროცესს რამდენიმე წუთი შეიძლება დასჭირდეს."
     }
 }
