--- a/src/shared/language/locales/ru/translation.json
+++ b/src/shared/language/locales/ru/translation.json
@@ -138,6 +138,13 @@
         "renameFailed": "Не вышло обновить заголовок.",
         "deletedSuccess": "Книга успешно удалена",
         "deleteFailed": "Произошла ошибка во время удаления.",
-        "loading": "Загрузка..."
+        "loading": "Загрузка...",
+        "emptyPage": "Пустая страница",
+        "userIdNotFound": "Айди пользователя не найдено либо файл не выбран",
+        "uploadSuccess": "Книга успешно загружена",
+        "uploadFail": "Не удалось загрузить книгу",
+        "uploadBookPdf": "Загрузить PDF книгу",
+        "pleaseWaitUpload": "Пожалуйста, подождите...",
+        "pleaseWaitUploadClue": "В зависимости от размера книги это может занять несколько минут."
     }
 }
