--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -134,6 +134,7 @@
         "viewBooks": "წიგნების მიმოხილვა",
         "updateTitle": "სათაურის განახლება",
         "deleteBook": "წიგნის წაშლა",
+        "noBooks": "თქვენ არ გაქვთ ატვირთული წიგნი",
         "continueReading": "კითხვის გაგრძელება",
         "startReading": "კითხვის დაწყება",
         "renameSuccess": "წარმატებით განახლდა.",
@@ -145,8 +146,9 @@
         "userIdNotFound": "მომხმარებლის ID ვერ მოიძებნა ან ფაილი არ არის არჩეული",
         "uploadSuccess": "წიგნი წარმატებით აიტვირთა",
         "uploadFail": "წიგნი ვერ აიტვირთა",
-        "uploadBookPdf": "PDF წიგნის ატვირთვა",
+        "uploadBookPdf": "+ PDF წიგნის ატვირთვა",
         "pleaseWaitUpload": "გთხოვთ მოითმინოთ, მიმდინარეობს ატვირთვა...",
-        "pleaseWaitUploadClue": "წიგნის ზომიდან გამომდინარე, პროცესს რამდენიმე წუთი შეიძლება დასჭირდეს."
+        "pleaseWaitUploadClue": "წიგნის ზომიდან გამომდინარე, პროცესს რამდენიმე წუთი შეიძლება დასჭირდეს.",
+        "removeTranslation": "თარგმნის წაშლა"
     }
 }
