--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -12,6 +12,48 @@
         "noUsers": "მომხმარებლები არ მოიძებნა.",
         "createLink": "შექმენით ახალი მომხმარებელი"
     },
+    "dashboard": {
+        "welcome": "მოგესალმებით Ostrich Learner-ში!",
+        "modules": {
+            "title": "მთავარი მოდულები და მათი ფუნქციები",
+            "addWords": {
+                "title": "სიტყვების დამატება",
+                "feature1": "თარგმნების დამატება ინგლისურ, ქართულ და რუსულ ენებზე",
+                "feature2": "არ შეიძლება ერთი და იგივე \"სიტყვა-თარგმანის\" დამატება"
+            },
+            "learnWords": {
+                "title": "სიტყვების სწავლა",
+                "feature1": "ახალი და ძველი სიტყვების სწავლა/გამეორება ფლეშ ბარათებით",
+                "feature2": "ტესტების გენერაცია ახალი და ძველი სიტყვების სწავლა/გასამეორებლად",
+                "feature3": "ტესტის მონაცემები იგზავნება სერვერზე პასუხების შესამოწმებლად და შედეგების შესანახად"
+            },
+            "viewWords": {
+                "title": "სიტყვების მიმოხილვა",
+                "feature1": "დაათვალიერეთ ლექსიკონები და წაშალეთ არასაჭირო სიტყვები",
+                "feature2": "შექმენით ფლეშ ბარათები არჩეული სიტყვების სასწავლებლად",
+                "feature3": "შექმენით ტესტები არჩეული სიტყვების მიხედვით",
+                "feature4": "გაფილტრეთ სიტყვები სხვადასხვა ველით"
+            },
+            "translationManagement": {
+                "title": "წიგნების მიმოხილვა",
+                "feature1": "ატვირთეთ PDF წიგნები, რომლებიც ინახება როგორც ტექსტი",
+                "feature2": "წიგნებს შრიფტის ზომისა და გვერდის სიგანის მორგებით",
+                "feature3": "პაგინაცია მორგებადია, რომ უკეთესი იყოს წაკითხვის პროცესიც და ვებ რესურსის ოპტიმიზაცია",
+                "feature4": "დაამატეთ და წაშალეთ თარგმანი პირდაპირ წიგნის გვერდებიდან",
+                "feature5": "იმახსოვრებს დაახლოებით, სად შეწყვიტეთ კითხვა და აჩვენებს პროგრესს"
+            },
+            "configuration": {
+                "title": "ზედა მენიუს პარამეტრები",
+                "feature1": "ინტერფეისის ენის შეცვლა (ინგლისური, ქართული, რუსული)",
+                "feature2": "თემის შეცვლა (ბნელი ან ნათელი)"
+            }
+        },
+        "additional": {
+            "title": "დამატებითი ფუნქციები პროფილის მენიუში",
+            "achievement": "მიღწევების გვერდი სწავლების აქტივობის სანახავად",
+            "settings": "სახელის განახლება და პროფილის წაშლა"
+        }
+    },
     "createUser": {
         "title": "მომხმარებლის შექმნა",
         "placeholder": "შეიყვანეთ მომხმარებლის სახელი",
