--- a/src/shared/language/locales/ru/translation.json
+++ b/src/shared/language/locales/ru/translation.json
@@ -23,6 +23,48 @@
         "or": "или",
         "login": "Войти"
     },
+    "dashboard": {
+        "welcome": "Добро пожаловать в Ostrich Learner!",
+        "modules": {
+            "title": "Основные модули и их функции",
+            "addWords": {
+                "title": "Добавление слов",
+                "feature1": "Добавляйте слова с поддержкой 3 языков (Английского, Грузинского, Русского)",
+                "feature2": "Предотвращает добавление дублирующих пар слово-перевод"
+            },
+            "learnWords": {
+                "title": "Изучение слов",
+                "feature1": "Изучайте новые и повторяйте старые слова с настраиваемыми карточками",
+                "feature2": "Генерируйте тесты для новых и старых слов, которые нуждаются в повторении",
+                "feature3": "Данные тестов отправляются на сервер для сохранения результатов и проверки ответов."
+            },
+            "viewWords": {
+                "title": "Просмотр слов",
+                "feature1": "Просмотр словарей и удаление ненужных слов",
+                "feature2": "Создание собственных флеш карточек для обучения",
+                "feature3": "Создание тестов в зависимости от выбора слов",
+                "feature4": "Фильтрация слов по различным полям"
+            },
+            "translationManagement": {
+                "title": "Просмотр книг",
+                "feature1": "Загрузка PDF книг, которые сохраняются как текст",
+                "feature2": "Чтение книг с регулируемым размером шрифта и шириной страницы",
+                "feature3": "Настраиваемая пагинация для оптимизации процесса чтения и веб ресурса",
+                "feature4": "Добавляйте переводы прямо со страниц книги",
+                "feature5": "Запоминает, примрено где остановился пользователь"
+            },
+            "configuration": {
+                "title": "Настройки из шапки",
+                "feature1": "Управление языком интерфейса (Английский, Грузинский, Русский)",
+                "feature2": "Управление темой интерфейса (тёмная, светлая)"
+            }
+        },
+        "additional": {
+            "title": "Дополнительные возможности в меню профиля",
+            "achievement": "Страница достижений для просмотра активности",
+            "settings": "Обновление никнейма и удаление аккаунта"
+        }
+    },
     "userMenu": {
         "profile": "Профиль",
         "achievements": "Достижения",
@@ -33,7 +75,7 @@
         "theme.dark": "Тёмная"
     },
     "sidebar": {
-        "study": "Запоминание слов",
+        "study": "Изучение слов",
         "addWords": "Добавление слов",
         "repeat": "Повторение слов",
         "wordList": "Словарь",
