--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -15,7 +15,7 @@
     "dashboard": {
         "welcome": "მოგესალმებით Ostrich Learner-ში!",
         "modules": {
-            "title": "მთავარი მოდულები და მათი ფუნქციები",
+            "title": "მთავარი მოდულები და ფუნქციონალი:",
             "addWords": {
                 "title": "სიტყვების დამატება",
                 "feature1": "თარგმნების დამატება ინგლისურ, ქართულ და რუსულ ენებზე",
@@ -43,7 +43,7 @@
                 "feature5": "იმახსოვრებს დაახლოებით, სად შეწყვიტეთ კითხვა და აჩვენებს პროგრესს"
             },
             "configuration": {
-                "title": "ზედა მენიუს პარამეტრები",
+                "title": "ინტერფეისის მმართვა",
                 "feature1": "ინტერფეისის ენის შეცვლა (ინგლისური, ქართული, რუსული)",
                 "feature2": "თემის შეცვლა (ბნელი ან ნათელი)"
             }
