--- a/src/shared/language/locales/ru/translation.json
+++ b/src/shared/language/locales/ru/translation.json
@@ -26,7 +26,7 @@
     "dashboard": {
         "welcome": "Добро пожаловать в Ostrich Learner!",
         "modules": {
-            "title": "Основные модули и их функции",
+            "title": "Основные модули и функционал:",
             "addWords": {
                 "title": "Добавление слов",
                 "feature1": "Добавляйте слова с поддержкой 3 языков (Английского, Грузинского, Русского)",
@@ -54,7 +54,7 @@
                 "feature5": "Запоминает, примрено где остановился пользователь"
             },
             "configuration": {
-                "title": "Настройки из шапки",
+                "title": "Настройки интерфейса",
                 "feature1": "Управление языком интерфейса (Английский, Грузинский, Русский)",
                 "feature2": "Управление темой интерфейса (тёмная, светлая)"
             }
